--- a/plugins/org.backmeup.zip/pom.xml
+++ b/plugins/org.backmeup.zip/pom.xml
@@ -12,6 +12,11 @@
 	<description>Creates a zip file of a backup</description>
 	<dependencies>
 		<dependency>
+			<groupId>org.apache.ant</groupId>
+			<artifactId>ant</artifactId>
+			<version>1.8.4</version>
+		</dependency>
+		<dependency>
 			<groupId>com.jcraft</groupId>
 			<artifactId>jsch</artifactId>
 			<version>0.1.48</version>
