--- a/plugins/org.backmeup.zip/pom.xml
+++ b/plugins/org.backmeup.zip/pom.xml
@@ -51,7 +51,7 @@
 						<Bundle-Name>${project.name}</Bundle-Name>
 						<Bundle-Version>${project.version}</Bundle-Version>
 						<Import-Package>!keypairgen, !org.ietf.*,!signature,!userauth,*</Import-Package>
-						<Embed-Dependency>jsch,jzlib</Embed-Dependency>
+						<Embed-Dependency>jsch,jzlib,ant</Embed-Dependency>
 						<Embed-Transitive>false</Embed-Transitive>
 						<Embed-Directory>lib</Embed-Directory>
 						<Private-Package>org.backmeup.zip.*</Private-Package>
