--- a/plugins/org.backmeup.zip/pom.xml
+++ b/plugins/org.backmeup.zip/pom.xml
@@ -50,9 +50,9 @@
 						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Name>${project.name}</Bundle-Name>
 						<Bundle-Version>${project.version}</Bundle-Version>
-						<Import-Package>!keypairgen, !org.ietf.*,!signature,!userauth,!com.sun.tools.*,!gnu.gcj*,!kaffe.util*,*</Import-Package>
+						<Import-Package>!keypairgen, !org.ietf.*,!signature,!userauth,*</Import-Package>
 						<Embed-Dependency>jsch,jzlib,ant</Embed-Dependency>
-						<Embed-Transitive>false</Embed-Transitive>
+						<Embed-Transitive>true</Embed-Transitive>
 						<Embed-Directory>lib</Embed-Directory>
 						<Private-Package>org.backmeup.zip.*</Private-Package>
 					</instructions>
