--- a/plugins/org.backmeup.zip/pom.xml
+++ b/plugins/org.backmeup.zip/pom.xml
@@ -50,7 +50,7 @@
 						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Name>${project.name}</Bundle-Name>
 						<Bundle-Version>${project.version}</Bundle-Version>
-						<Import-Package>!keypairgen, !org.ietf.*,!signature,!userauth,*</Import-Package>
+						<Import-Package>!keypairgen, !org.ietf.*,!signature,!userauth,!com.sun.*,!gnu.gcj,!javax.activation,!javax.mail.*,!javax.xml.*,!kaffe.*,!org.apache.*,!org.w3c.*,!org.xml.*,!sun.*,!weblogic,*</Import-Package>
 						<Embed-Dependency>jsch,jzlib,ant</Embed-Dependency>
 						<Embed-Transitive>false</Embed-Transitive>
 						<Embed-Directory>lib</Embed-Directory>
