--- a/plugins/org.backmeup.twitter/pom.xml
+++ b/plugins/org.backmeup.twitter/pom.xml
@@ -10,12 +10,10 @@
 	<packaging>bundle</packaging>
 	<dependencies>
 		<dependency>
-			<groupId>org.twitter4j</groupId>
-			<artifactId>twitter4j-core</artifactId>
-			<version>2.2.5</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/lib/twitter4j-core-2.2.5.jar</systemPath>
-		</dependency>
+           <groupId>org.twitter4j</groupId>
+           <artifactId>twitter4j-core</artifactId>
+           <version>[3.0,)</version>
+       </dependency>
 		<dependency>
 			<groupId>ecs</groupId>
 			<artifactId>ecs</artifactId>
