#64: Added missing configuration files

--- a/org.backmeup.plugin.api.impl/src/main/resources/indexer.properties
+++ b/org.backmeup.plugin.api.impl/src/main/resources/indexer.properties
@@ -2,3 +2,4 @@ actionId=org.backmeup.indexer
 actionTitle=Indexer 
 actionDescription=The indexer plugin 
 actionPriority=500
+actionVisibility=global
