--- a/org.backmeup.plugin.api.impl/src/main/resources/encryption.properties
+++ b/org.backmeup.plugin.api.impl/src/main/resources/encryption.properties
@@ -2,3 +2,4 @@ actionId=org.backmeup.encryption
 actionTitle=Encryption Plugin
 actionDescription=This plugin encrypts all files by using TrueCrypt
 actionPriority=750
+actionVisibility=job
