--- a/org.backmeup.plugin.api.impl/src/main/resources/filesplitt.properties
+++ b/org.backmeup.plugin.api.impl/src/main/resources/filesplitt.properties
@@ -2,3 +2,4 @@ actionId=org.backmeup.filesplitting
 actionTitle=File Splitter 
 actionDescription=The file splitter plugin which splits files that exceed a certain file size 
 actionPriority=1000
+actionVisibility=hidden
