--- a/org.backmeup.model/pom.xml
+++ b/org.backmeup.model/pom.xml
@@ -21,6 +21,11 @@
 			<version>1.0.1.Final</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>    
+		<dependency>
 			<groupId>org.jboss.weld.se</groupId>
 			<artifactId>weld-se-core</artifactId>
 			<version>${weld.version}</version>
@@ -46,7 +51,7 @@
 						<Bundle-Version>${project.version}</Bundle-Version>
 						<Export-Package>org.backmeup.model,org.backmeup.model.spi,org.backmeup.model.exceptions</Export-Package>
 						<Embed-Directory>lib</Embed-Directory>
-						<Embed-Dependency>gson</Embed-Dependency>
+						<Embed-Dependency>gson, commons-lang</Embed-Dependency>
 						<Import-Package>!javax.*</Import-Package>
 					</instructions>
 				</configuration>
