--- a/org.backmeup.rest/pom.xml
+++ b/org.backmeup.rest/pom.xml
@@ -20,7 +20,7 @@
           <dependency>
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
-   	    <version>9.1-901.jdbc4</version>
+   	    	<version>9.1-901.jdbc4</version>
           </dependency>
  		<dependency>
 			<groupId>junit</groupId>
@@ -43,8 +43,6 @@
 			<artifactId>utilities</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		<!-- core library -->
-
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxb-provider</artifactId>
@@ -61,19 +59,11 @@
 			<artifactId>jaxb-impl</artifactId>
 			<version>2.2.5</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.backmeup</groupId>
 			<artifactId>job.impl</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
-		<!--  dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-jettison-provider</artifactId>
-			<version>2.3.3.Final</version>
-		</dependency -->
-
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
@@ -89,31 +79,11 @@
 			<artifactId>resteasy-jackson-provider</artifactId>
 			<version>2.3.3.Final</version>
 		</dependency>
-
-		<!-- <dependency>
-	
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.9.6</version>
-		</dependency>  -->
-
-		<!-- <dependency> <groupId>com.sun.jersey</groupId> <artifactId>jersey-core</artifactId> 
-			<version>${jersey.version}</version> </dependency> <dependency> <groupId>com.sun.jersey</groupId> 
-			<artifactId>jersey-client</artifactId> <version>${jersey.version}</version> 
-			</dependency> <dependency> <groupId>com.sun.jersey</groupId> <artifactId>jersey-json</artifactId> 
-			<version>1.12</version> </dependency> <dependency> <groupId>com.sun.jersey.contribs</groupId> 
-			<artifactId>jersey-multipart</artifactId> <version>${jersey.version}</version> 
-			</dependency> <dependency> <groupId>com.sun.jersey</groupId> <artifactId>jersey-server</artifactId> 
-			<version>${jersey.version}</version> </dependency> -->
-		<!-- <dependency> <groupId>com.sun.jersey</groupId> <artifactId>jersey-servlet</artifactId> 
-			<version>${jersey.version}</version> </dependency> -->
-
 		<dependency>
 			<groupId>org.jboss.weld.se</groupId>
 			<artifactId>weld-se</artifactId>
 			<version>${weld.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
@@ -176,38 +146,11 @@
 					<artifactId>job.impl</artifactId>
 					<version>${project.version}</version>
 				</dependency>
-
-
 				<!-- exchange this with the database to be used -->
 				<dependency>
-					<groupId>org.hsqldb</groupId>
-					<artifactId>hsqldb</artifactId>
-					<version>2.2.4</version>
-				</dependency>
-			</dependencies>
-		</profile>
-		<profile>
-			<id>dummy</id>
-			<activation>
-				<property>
-					<name>dummy</name>
-				</property>
-			</activation>
-			<dependencies>
-				<dependency>
-					<groupId>org.backmeup</groupId>
-					<artifactId>logic.dummy.impl</artifactId>
-					<version>${project.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.backmeup</groupId>
-					<artifactId>logic</artifactId>
-					<version>${project.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.hsqldb</groupId>
-					<artifactId>hsqldb</artifactId>
-					<version>2.2.4</version>
+					<groupId>postgresql</groupId>
+					<artifactId>postgresql</artifactId>
+					<version>9.1-901.jdbc4</version>
 				</dependency>
 			</dependencies>
 		</profile>
@@ -216,51 +159,19 @@
 			<properties>
 				<packaging.type>war</packaging.type>
 			</properties>
-			<!-- <build> <plugins> <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>tomcat-maven-plugin</artifactId> 
-				<version></version> <configuration> <server>tomcat</server> </configuration> 
-				</plugin> </plugins> </build> -->
 			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.tomcat.maven</groupId>
-						<artifactId>tomcat6-maven-plugin</artifactId>
-						<version>2.0</version>
-						<configuration>						
-                                                  <server>tomcat</server>
-                                                          <username>username</username>
-                                                          <password>password</password>
-						</configuration>
-					</plugin>					
-				</plugins>
-			</build>
-			<!-- <dependencies> <dependency> <groupId>com.sun.jersey</groupId> <artifactId>jersey-servlet</artifactId> 
-				<version>${jersey.version}</version> </dependency> </dependencies> -->
-		</profile>
-		<profile>
-			<id>war-t7</id>
-			<properties>
-				<packaging.type>war</packaging.type>
-			</properties>
-			<!-- <build> <plugins> <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>tomcat-maven-plugin</artifactId> 
-				<version></version> <configuration> <server>tomcat</server> </configuration> 
-				</plugin> </plugins> </build> -->
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.tomcat.maven</groupId>
-						<artifactId>tomcat6-maven-plugin</artifactId>
+						<artifactId>tomcat7-maven-plugin</artifactId>
 						<version>2.0</version>
 						<configuration>		
-							<url>http://localhost:8080/manager/html</url>				
-                                                        <server>tomcat</server>
-                                                        <username>username</username>
-                                                        <password>password</password>
+							<url>http://127.0.0.1:8080/manager/text</url>
+							<server>tomcat</server>
 						</configuration>
 					</plugin> 
 				</plugins>
 			</build>
-			<!-- <dependencies> <dependency> <groupId>com.sun.jersey</groupId> <artifactId>jersey-servlet</artifactId> 
-				<version>${jersey.version}</version> </dependency> </dependencies> -->
 		</profile>
 	</profiles>
 	<build>
