--- a/org.backmeup.logic.impl/src/test/resources/bl.properties
+++ b/org.backmeup.logic.impl/src/test/resources/bl.properties
@@ -1,17 +1,17 @@
-callbackUrl = http://www.backmeup.at
+callbackUrl = http://localhost:9998/oauth_callback
 # the url that shall be sent within the verification emails. The verification key replaces the %s entry within the url.
-emailVerificationUrl = http://www.backmeup.at/verify_email/%s
+emailVerificationUrl = http://localhost:9998/verify_email/%s
 minimalPasswordLength = 8
 # email regex provided by http://www.regular-expressions.info/email.html
 emailRegex = ^[A-Z0-9._%+-]+@[A-Z0-9.-]+\.[A-Z]{2,4}$
 
-job.temporaryDirectory = /tmp/bmu
+job.temporaryDirectory = /data/tmp_files
 # %SOURCE% is a placeholder for the source string of the backup (e. g. dropbox); this string will be parsed by a SimpleDateFormat-instance
 # Characters written between '...' will not be interpreted by SimpleDateFormat (therefore the 'M' in BMU will not be converted into the Month.
-job.backupname = 'BMU_%SOURCE%_'dd_MM_yyyy_hh_mm
+job.backupname = 'BMU_%SOURCE%_%PROFILEID%_'dd_MM_yyyy_HH_mm
 
-keyserver.scheme = https
-keyserver.host = keysrv.backmeup.at
+keyserver.scheme = http
+keyserver.host = localhost:8080
 keyserver.path = /keysrv
 
 keyserver.truststore = bmu-keysrv.truststore
@@ -26,6 +26,10 @@ keyserver.allowAllHostnames = true
 
 message.queue.host = localhost
 message.queue.name = backmeup
+message.queue.receivers = 5
 
 index.host = localhost
-index.port = 9200
+index.port = 9300
+
+thumbnail.temp.dir = thumbnails
+thumbnail.dimensions = 120
