added keyserver files changed properties for dev enviornment

--- a/org.backmeup.utilities/src/main/resources/mail.properties
+++ b/org.backmeup.utilities/src/main/resources/mail.properties
@@ -1,5 +1,12 @@
 mail.smtp.host=mail.x
 mail.from=support@backmeup.at
+mail.user=
 mail.smtp.port=25
 mail.smtp.debug=true
 
+# use the following settings for TLS protected SMTP servers
+mail.smtp.starttls.enable=true
+mail.smtp.auth=true
+mail.smtp.socketFactory.port=465
+mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+mail.smtp.socketFactory.fallback=false
