--- a/org.backmeup.rest/pom.xml
+++ b/org.backmeup.rest/pom.xml
@@ -73,6 +73,12 @@
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-multipart-provider</artifactId>
 			<version>2.3.3.Final</version>
+			<exclusions>
+            	<exclusion>
+                	<artifactId>servlet-api</artifactId>
+                	<groupId>javax.servlet</groupId>
+            	</exclusion>
+            </exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
@@ -83,13 +89,21 @@
 			<groupId>org.jboss.weld.se</groupId>
 			<artifactId>weld-se</artifactId>
 			<version>${weld.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>javax.el</groupId>
+					<artifactId>javax.el-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
+		<!-- 
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>
+		 -->
 	</dependencies>
 	<profiles>
 		<profile>
@@ -164,7 +178,7 @@
 					<plugin>
 						<groupId>org.apache.tomcat.maven</groupId>
 						<artifactId>tomcat7-maven-plugin</artifactId>
-						<version>2.0</version>
+						<version>2.1</version>
 						<configuration>		
 							<url>http://127.0.0.1:8080/manager/text</url>
 							<server>tomcat</server>
