--- a/org.backmeup.logic.dummy.impl/pom.xml
+++ b/org.backmeup.logic.dummy.impl/pom.xml
@@ -24,9 +24,9 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.jboss.weld.se</groupId>
-			<artifactId>weld-se-core</artifactId>
-			<version>${weld.version}</version>
-		</dependency>
+      		<groupId>javax.enterprise</groupId>
+      		<artifactId>cdi-api</artifactId>
+      		<version>1.0</version>
+    	</dependency>
 	</dependencies>
 </project>
