--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<groupId>org.backmeup</groupId>
-	<artifactId>app</artifactId>
+	<artifactId>backmeup-service</artifactId>
 	<version>0.0.1</version>
 	<packaging>pom</packaging>
+
 	<properties>
 		<weld.version>1.1.8.Final</weld.version>
-                <jersey.version>1.12</jersey.version>
-                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jersey.version>1.12</jersey.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+
 	<modules>
-		<!-- build the interfaces + model first -->
 		<module>org.backmeup.model</module>
         <module>org.backmeup.utilities</module>
 		<module>org.backmeup.dal</module>
@@ -20,13 +22,9 @@
 		<module>org.backmeup.plugin</module>
 		<module>org.backmeup.plugin.api</module>
 		<module>org.backmeup.logic</module>
-                
-        <!-- build utilities -->
 		<module>org.backmeup.keyserver.client</module>
-
-		<!-- build the implementations -->
-        <module>org.backmeup.dal.jpa.impl</module>
-        <module>org.backmeup.plugin.api.impl</module>
+		<module>org.backmeup.dal.jpa.impl</module>
+		<module>org.backmeup.plugin.api.impl</module>
 		<module>org.backmeup.job.impl</module>
 		<module>org.backmeup.plugin.osgi.impl</module>
 		<module>org.backmeup.logic.dummy.impl</module>
