--- a/org.backmeup.job.impl/pom.xml
+++ b/org.backmeup.job.impl/pom.xml
@@ -85,11 +85,13 @@
 			<version>1.0.3</version>
 		</dependency>
 		 -->
+		 <!-- 
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-frontend-jaxrs</artifactId>
 			<version>2.5.0</version>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
 			<artifactId>akka-actor</artifactId>
@@ -100,15 +102,22 @@
   			<artifactId>amqp-client</artifactId>
   			<version>2.8.6</version>
 		</dependency>
+		<!--  
 		<dependency>
     		<groupId>org.quartz-scheduler</groupId>
     		<artifactId>quartz</artifactId>
     		<version>2.1.6</version>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
-		</dependency> 
+		</dependency>
+		<dependency>
+      		<groupId>javax.enterprise</groupId>
+      		<artifactId>cdi-api</artifactId>
+      		<version>1.0</version>
+    	</dependency> 
 	</dependencies>
 </project>
