--- a/org.backmeup.keyserver.client/pom.xml
+++ b/org.backmeup.keyserver.client/pom.xml
@@ -21,6 +21,11 @@
 			<version>4.1.2</version>
 		</dependency>
 		<dependency>
+      		<groupId>javax.enterprise</groupId>
+      		<artifactId>cdi-api</artifactId>
+      		<version>1.0</version>
+    	</dependency>
+		<dependency>
 			<groupId>org.backmeup</groupId>
 			<artifactId>model</artifactId>
 			<version>${project.version}</version>
