--- a/org.backmeup.plugin.osgi.impl/pom.xml
+++ b/org.backmeup.plugin.osgi.impl/pom.xml
@@ -1,22 +1,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-<parent>
+	<parent>
 		<groupId>org.backmeup</groupId>
 		<artifactId>app</artifactId>
 		<version>0.0.1</version>
 	</parent>
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>plugin.osgi.impl</artifactId>  
-  <dependencies>
-  	<dependency>
-      <groupId>org.apache.felix</groupId>
-      <artifactId>org.apache.felix.framework</artifactId>
-      <version>4.0.2</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.backmeup</groupId>
-    	<artifactId>plugin</artifactId>
-    	<version>${project.version}</version>
-    </dependency>
-  
+  	<modelVersion>4.0.0</modelVersion>
+  	<artifactId>plugin.osgi.impl</artifactId>  
+  	<dependencies>
+  		<dependency>
+      		<groupId>org.apache.felix</groupId>
+      		<artifactId>org.apache.felix.framework</artifactId>
+      		<version>4.0.2</version>
+    	</dependency>
+    	<dependency>
+    		<groupId>org.backmeup</groupId>
+    		<artifactId>plugin</artifactId>
+    		<version>${project.version}</version>
+    	</dependency>
+    	<dependency>
+      		<groupId>javax.enterprise</groupId>
+      		<artifactId>cdi-api</artifactId>
+      		<version>1.0</version>
+    	</dependency>
+    	<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
   </dependencies>
 </project>
