--- a/org.backmeup.rest/pom.xml
+++ b/org.backmeup.rest/pom.xml
@@ -17,11 +17,12 @@
 	<name>REST Webapp</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
-          <dependency>
+	<!--  -->
+        <dependency>
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
    	    	<version>9.1-901.jdbc4</version>
-          </dependency>
+        </dependency>  
  		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -64,27 +65,38 @@
 			<artifactId>job.impl</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<!-- defined in resteasy-multipart-provider 
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
 			<version>2.3.3.Final</version>
 		</dependency>
+		 -->
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-multipart-provider</artifactId>
 			<version>2.3.3.Final</version>
+			<!-- 
 			<exclusions>
             	<exclusion>
                 	<artifactId>servlet-api</artifactId>
                 	<groupId>javax.servlet</groupId>
             	</exclusion>
             </exclusions>
+             -->
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jackson-provider</artifactId>
 			<version>2.3.3.Final</version>
 		</dependency>
+		<!-- 
 		<dependency>
 			<groupId>org.jboss.weld.se</groupId>
 			<artifactId>weld-se</artifactId>
@@ -95,6 +107,24 @@
 					<artifactId>javax.el-api</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		 -->
+		<dependency>
+			<groupId>org.jboss.weld.se</groupId>
+			<artifactId>weld-se-core</artifactId>
+			<version>${weld.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>javax.el</groupId>
+					<artifactId>javax.el-api</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>javax.el</groupId>
+			<artifactId>el-api</artifactId>
+			<version>2.2</version>
+			<scope>provided</scope>
 		</dependency>
 		<!-- 
 		<dependency>
