Refactored logging Use slf4j logger cosistently Replaced all sys.out/err with log calls

--- a/org.backmeup.utilities/pom.xml
+++ b/org.backmeup.utilities/pom.xml
@@ -31,5 +31,10 @@
 			<artifactId>mail</artifactId>
 			<version>1.4.5</version>
 		</dependency>  -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+		</dependency>
 	</dependencies>
 </project>
