--- a/org.backmeup.dal.jpa.impl/pom.xml
+++ b/org.backmeup.dal.jpa.impl/pom.xml
@@ -24,5 +24,10 @@
       		<artifactId>cdi-api</artifactId>
       		<version>1.0</version>
     	</dependency>
+    	<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+		</dependency>
 	</dependencies>
 </project>
