--- a/org.backmeup.job.impl/pom.xml
+++ b/org.backmeup.job.impl/pom.xml
@@ -109,11 +109,19 @@
     		<version>2.1.6</version>
 		</dependency>
 		-->
+		<!-- 
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+		 -->
+		 <dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		 
 		<dependency>
       		<groupId>javax.enterprise</groupId>
       		<artifactId>cdi-api</artifactId>
