--- a/org.backmeup.keyserver.client/pom.xml
+++ b/org.backmeup.keyserver.client/pom.xml
@@ -35,6 +35,11 @@
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
 		</dependency>		
 	</dependencies>
 </project>
