--- a/org.backmeup.logic.impl/pom.xml
+++ b/org.backmeup.logic.impl/pom.xml
@@ -71,13 +71,19 @@
       		<artifactId>cdi-api</artifactId>
       		<version>1.0</version>
     	</dependency>
+    	<!-- 
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
-            
-
+		 -->
+		 <dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		 
 		<!-- test relevant dependencies -->
 		<dependency>
 			<groupId>org.backmeup</groupId>
