--- a/org.backmeup.rest/pom.xml
+++ b/org.backmeup.rest/pom.xml
@@ -108,7 +108,8 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		 -->
+		-->
+		<!--
 		<dependency>
 			<groupId>org.jboss.weld.se</groupId>
 			<artifactId>weld-se-core</artifactId>
@@ -120,6 +121,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		-->
+		<dependency>
+			<groupId>org.jboss.weld.servlet</groupId>
+			<artifactId>weld-servlet</artifactId>
+			<version>2.1.0.Final</version>
+		</dependency>
+            
 		<dependency>
 			<groupId>javax.el</groupId>
 			<artifactId>el-api</artifactId>
@@ -134,11 +142,12 @@
 			<scope>provided</scope>
 		</dependency>
 		 -->
-		 <dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.5</version>
-		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.0</version>
+		</dependency> 
+
 	</dependencies>
 	<profiles>
 		<profile>
