--- a/org.backmeup.rest/src/main/webapp/WEB-INF/web.xml
+++ b/org.backmeup.rest/src/main/webapp/WEB-INF/web.xml
@@ -3,9 +3,18 @@
 	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
-	<listener>
-		<listener-class>org.backmeup.rest.listener.ContextListener</listener-class>
-	</listener>
+  
+  <listener>
+	<listener-class>org.backmeup.rest.listener.ContextListener</listener-class>
+  </listener>
+  <!-- 
+  <listener>
+    <listener-class>org.jboss.weld.environment.servlet.BeanManagerResourceBindingListener</listener-class>
+  </listener>
+   -->
+  <listener>
+    <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
+  </listener>
 	<servlet>
 		<servlet-name>BackMeUp REST API</servlet-name>
 		<!-- <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class> 
@@ -54,4 +63,9 @@
 		<param-name>resteasy.servlet.mapping.prefix</param-name>
 		<param-value>/backmeup</param-value>
 	</context-param>
+	
+	<resource-env-ref>
+		<resource-env-ref-name>BeanManager</resource-env-ref-name>
+		<resource-env-ref-type>javax.enterprise.inject.spi.BeanManager</resource-env-ref-type>
+	</resource-env-ref>
 </web-app>
