--- a/org.backmeup.utilities/pom.xml
+++ b/org.backmeup.utilities/pom.xml
@@ -36,5 +36,10 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.5</version>
 		</dependency>
+		<dependency>
+      		<groupId>javax.enterprise</groupId>
+      		<artifactId>cdi-api</artifactId>
+      		<version>1.0</version>
+    	</dependency>
 	</dependencies>
 </project>
