Use CDI exclusivly to inject configuration settings to classes: * deleted old *Config.java files * new producer for boolean config values

--- a/org.backmeup.rest/src/main/resources/backmeup.properties
+++ b/org.backmeup.rest/src/main/resources/backmeup.properties
@@ -61,8 +61,8 @@ backmeup.job.temporaryDirectory = /data/tmp_files
 # therefore the 'M' in BMU will not be converted into the Month.
 backmeup.job.backupname = 'BMU_%SOURCE%_%PROFILEID%_'dd_MM_yyyy_HH_mm
 
-backmeup.thumbnail.temp.dir = thumbnails
-backmeup.thumbnail.dimensions = 120
+#backmeup.thumbnail.temp.dir = thumbnails
+#backmeup.thumbnail.dimensions = 120
 # -----------------------------------------------------------------------------
 
 # USER ------------------------------------------------------------------------
