--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,16 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<weld.version>1.1.8.Final</weld.version>
+		<!-- Dependency versions.
+		     Please keep alphabetical
+			 Properties should be in form "version.<groupId>", or in case where
+			 multiple artefacts of the same groupId are used  "version.<groupId>.<artifactId>"
+		-->
+		<version.org.slf4j>1.7.5</version.org.slf4j>
+		
+		
+		<!--<weld.version>1.1.8.Final</weld.version>-->
+		<weld.version>2.1.0.Final</weld.version>
 		<jersey.version>1.12</jersey.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
