Inject elasticsearch node to businesslogic Added factory to create (produce) elasticsearch node Added configuration keys and values for elasticsearch node factory

--- a/org.backmeup.rest/src/main/resources/backmeup.properties
+++ b/org.backmeup.rest/src/main/resources/backmeup.properties
@@ -10,10 +10,11 @@
 # ${env:NAME_OF_ENV_VARIABLE}
 # 
 # Example: backmeup.jdbc.url = ${env:BACKMEUP_JDBC_URL}
-
-
+#
+# Attention: Delete all trailing whitespace (at the end of each line)
+#
 # DATABASE --------------------------------------------------------------------
-# User must be granted permissions to create talbes.
+# User must be granted permissions to create tables.
 backmeup.jdbc.username =
 backmeup.jdbc.password =
 # JDBC connection string. Currently supported databases: PostgreSQL
@@ -44,8 +45,22 @@ keyserver.allowAllHostnames = true
 
 # INDEX -----------------------------------------------------------------------
 backmeup.index.host = localhost
-backmeup.index.hostnames = es1, es2
+#backmeup.index.hostnames = es1, es2
 backmeup.index.port = 9300
+# Cluster name identifies the cluster for auto-discovery. If you're running
+# multiple clusters on the same network, make sure you're using unique names.
+backmeup.index.cluster.name = es-backmeup-cluster
+# Decide whether embedded node should hold data or not.
+# Setting 'index.node.data' to true signals the node to allocate shards. The
+# path to the directory where to store the data can be specified within the
+# setting 'index.node.data.path'. 
+backmeup.index.node.data = true
+backmeup.index.node.data.path = C:\\Program Files (Dev)\\apache-tomcat-7.0.42\\data\\rest\\index
+# Optionally, specify the storage type for data. Set to 'memory' for unit 
+# and/or integration tests. This setting uses in memory data, 0 replicas
+# and only 1 shard. 
+backmeup.index.teststorage = true
+
 # -----------------------------------------------------------------------------
 
 # BACKUP JOBS------------------------------------------------------------------
