--- a/plugins/org.backmeup.dummy/pom.xml
+++ b/plugins/org.backmeup.dummy/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.backmeup</groupId>
-    <artifactId>app</artifactId>
+    <artifactId>plugins</artifactId>
     <version>0.0.1</version>
   </parent>
   <artifactId>dummy</artifactId>
