--- a/plugins/org.backmeup.discmailing/pom.xml
+++ b/plugins/org.backmeup.discmailing/pom.xml
@@ -42,6 +42,12 @@
 			<version>0.0.1</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
