fix parent name in modules as parent has been renamed from app to backmeup-service (parent is not found any more)

--- a/org.backmeup.rest/pom.xml
+++ b/org.backmeup.rest/pom.xml
@@ -8,7 +8,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>${packaging.type}</packaging>
 	<parent>
-		<artifactId>app</artifactId>
+		<artifactId>backmeup-service</artifactId>
 		<groupId>org.backmeup</groupId>
 		<version>0.0.1</version>
 	</parent>
