--- a/org.backmeup.plugin.osgi.impl/pom.xml
+++ b/org.backmeup.plugin.osgi.impl/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<groupId>org.backmeup</groupId>
-		<artifactId>app</artifactId>
+		<artifactId>backmeup-service</artifactId>
 		<version>0.0.1</version>
 	</parent>
   	<modelVersion>4.0.0</modelVersion>
