--- a/org.backmeup.utilities/pom.xml
+++ b/org.backmeup.utilities/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.backmeup</groupId>
-		<artifactId>app</artifactId>
+		<artifactId>backmeup-service</artifactId>
 		<version>0.0.1</version>
 	</parent>
 	<artifactId>utilities</artifactId>
