Start job receivers in business logic Pass necessary configuration to RabbitMQJobReceiver using the constructer When initializing ElasticSearchIndexClient, create index if it not exists

--- a/org.backmeup.rest/src/main/resources/backmeup.properties
+++ b/org.backmeup.rest/src/main/resources/backmeup.properties
@@ -47,6 +47,8 @@ keyserver.allowAllHostnames = true
 backmeup.index.host = localhost
 #backmeup.index.hostnames = es1, es2
 backmeup.index.port = 9300
+#
+backmeup.index.name = backmeup
 # Cluster name identifies the cluster for auto-discovery. If you're running
 # multiple clusters on the same network, make sure you're using unique names.
 backmeup.index.cluster.name = es-backmeup-cluster
