--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
 			 multiple artefacts of the same groupId are used  "version.<groupId>.<artifactId>"
 		-->
 		<version.org.slf4j>1.7.5</version.org.slf4j>
-		
-		
+
+
 		<!--<weld.version>1.1.8.Final</weld.version>-->
 		<weld.version>2.1.0.Final</weld.version>
 		<jersey.version>1.12</jersey.version>
@@ -39,6 +39,7 @@
 		<module>org.backmeup.logic.dummy.impl</module>
 		<module>org.backmeup.logic.impl</module>
 		<module>org.backmeup.rest</module>
+		<module>plugins</module>
 	</modules>
 
 	<build>
