--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
 	<version>0.0.1</version>
 	<packaging>pom</packaging>
 
+    <prerequisites>
+        <maven>3.0.3</maven>
+    </prerequisites>
+
 	<properties>
 		<!-- Dependency versions.
 		     Please keep alphabetical
@@ -20,7 +24,10 @@
 		<!--<weld.version>1.1.8.Final</weld.version>-->
 		<weld.version>2.1.0.Final</weld.version>
 		<jersey.version>1.12</jersey.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <encoding>UTF-8</encoding>
+        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
+        <project.build.java.target>1.6</project.build.java.target>
 	</properties>
 
 	<modules>
@@ -62,8 +69,9 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+                    <source>${project.build.java.target}</source>
+                    <target>${project.build.java.target}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -72,9 +80,28 @@
 				<version>2.5</version>
 				<configuration>
 					<!-- specify UTF-8, ISO-8859-1 or any other file encoding -->
-					<encoding>UTF-8</encoding>
+					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.2</version>
+                <!--
+                <configuration>
+                    <failOnWarning>true</failOnWarning>
+                </configuration>
+                -->
+                <executions>
+                     <execution>
+                         <id>check-dependencies</id>
+                         <phase>verify</phase>
+                         <goals>
+                             <goal>analyze</goal>
+                         </goals>
+                     </execution>
+                 </executions>
+             </plugin>
 		</plugins>
 	</build>
 </project>
