--- a/plugins/org.backmeup.dropbox/pom.xml
+++ b/plugins/org.backmeup.dropbox/pom.xml
@@ -33,13 +33,13 @@
 		<dependency>
 			<groupId>org.backmeup</groupId>
 			<artifactId>model</artifactId>
-			<version>0.0.1</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.backmeup</groupId>
 			<artifactId>plugin.api</artifactId>
-			<version>0.0.1</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
@@ -71,7 +71,7 @@
 		<dependency>
 			<groupId>org.backmeup</groupId>
 			<artifactId>plugin.api.impl</artifactId>
-			<version>0.0.1</version>
+			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
