--- a/plugins/org.backmeup.dummy/pom.xml
+++ b/plugins/org.backmeup.dummy/pom.xml
@@ -11,12 +11,12 @@
 		<dependency>
 			<groupId>org.backmeup</groupId>
 			<artifactId>model</artifactId>
-			<version>0.0.1</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.backmeup</groupId>
 			<artifactId>plugin.api</artifactId>
-			<version>0.0.1</version>
+			<version>${project.version}</version>
 		</dependency>
   </dependencies>
   <build>
