--- a/plugins/org.backmeup.skydrive/pom.xml
+++ b/plugins/org.backmeup.skydrive/pom.xml
@@ -11,7 +11,7 @@
   	<dependency>
   		<groupId>org.backmeup</groupId>
 		<artifactId>model</artifactId>
-		<version>0.0.1</version>
+		<version>${project.version}</version>
   	</dependency>
   	 
   	<dependency>
@@ -29,13 +29,13 @@
   	<dependency>
   		<groupId>org.backmeup</groupId>
 		<artifactId>plugin.api</artifactId>
-		<version>0.0.1</version>
+		<version>${project.version}</version>
   	</dependency> 
   	
   	<dependency>
   		<groupId>org.backmeup</groupId>
 		<artifactId>plugin.api.impl</artifactId>
-		<version>0.0.1</version>
+		<version>${project.version}</version>
 		<scope>test</scope>
   	</dependency> 
   </dependencies>
