--- a/plugins/org.backmeup.twitter/pom.xml
+++ b/plugins/org.backmeup.twitter/pom.xml
@@ -22,12 +22,12 @@
 		<dependency>
 			<groupId>org.backmeup</groupId>
 			<artifactId>model</artifactId>
-			<version>0.0.1</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.backmeup</groupId>
 			<artifactId>plugin.api</artifactId>
-			<version>0.0.1</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.appengine</groupId>
