--- a/plugins/org.backmeup.zip/pom.xml
+++ b/plugins/org.backmeup.zip/pom.xml
@@ -29,12 +29,12 @@
 		<dependency>
 			<groupId>org.backmeup</groupId>
 			<artifactId>plugin.api</artifactId>
-			<version>0.0.1</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.backmeup</groupId>
 			<artifactId>plugin.api.impl</artifactId>
-			<version>0.0.1</version>
+			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
