ready for development for next version

--- a/org.backmeup.logic.dummy.impl/pom.xml
+++ b/org.backmeup.logic.dummy.impl/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>app</artifactId>
 		<groupId>org.backmeup</groupId>
-		<version>1.0.1</version>
+		<version>1.0.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>logic.dummy.impl</artifactId>
 	<dependencies>
