--- a/org.backmeup.plugin/pom.xml
+++ b/org.backmeup.plugin/pom.xml
@@ -2,7 +2,7 @@
 <parent>
 		<groupId>org.backmeup</groupId>
 		<artifactId>app</artifactId>
-		<version>1.0.1</version>
+		<version>1.0.2-SNAPSHOT</version>
 	</parent>
   <modelVersion>4.0.0</modelVersion>  
   <artifactId>plugin</artifactId>  
