--- a/plugins/org.backmeup.discmailing/pom.xml
+++ b/plugins/org.backmeup.discmailing/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.backmeup</groupId>
 		<artifactId>plugins</artifactId>
-		<version>1.0.1</version>
+		<version>1.0.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>discmailing</artifactId>
 	<packaging>bundle</packaging>
