--- a/plugins/org.backmeup.skydrive/pom.xml
+++ b/plugins/org.backmeup.skydrive/pom.xml
@@ -3,7 +3,7 @@
   <parent>
 		<groupId>org.backmeup</groupId>
 		<artifactId>plugins</artifactId>
-		<version>1.0.1</version>
+		<version>1.0.2-SNAPSHOT</version>
 	</parent> 
   <artifactId>skydrive</artifactId> 
   <packaging>bundle</packaging>
